--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-Yubico dotnet client
---------------------
+== Yubico dotnet client ==
 
 Validation protocol 2.0 client for dotNet.
 To use this with YubiCloud you will need a free clientId and apiKey from https://upgrade.yubico.com/getapikey/
 
-Usage
------
+=== Usage ===
 
+[source, c#]
+----
 YubicoClient client = new YubicoClient(clientId, apiKey);
 YubicoResponse response = client.Verify(otp);
 if(response.Status == YubicoResponseStatus.Ok) 
@@ -17,3 +17,4 @@ else
 {
   // validation failure
 }
+----
