--- a/README
+++ b/README
@@ -5,7 +5,7 @@ To use this with YubiCloud you will need a free clientId and apiKey from https:/
 
 === Usage ===
 
-[source, c#]
+[source, csharp]
 ----
 YubicoClient client = new YubicoClient(clientId, apiKey);
 YubicoResponse response = client.Verify(otp);
