--- a/README
+++ b/README
@@ -10,8 +10,8 @@ For more details on how to use YubiKey OTP libraries, visit https://developers.y
 [source, csharp]
 ----
 YubicoClient client = new YubicoClient(clientId, apiKey);
-IYubicoResponse response = client.Verify(otp);
-if(response.Status == YubicoResponseStatus.Ok) 
+IYubicoResponse response = await client.VerifyAsync(otp);
+if(response != null && response.Status == YubicoResponseStatus.Ok) 
 {
   // validation success
 } 
